--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.1",
     "pinia": "^2.3.1",
-    "tailwindcss": "^4.0.0",
-    "vue": "^3.5.13"
+    "tailwindcss": "^4.0.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
