add miragejs server to project for skelton

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "miragejs": "^0.1.48",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
